--- a/app/libros-prestados/libros-prestados.component.html
+++ b/app/libros-prestados/libros-prestados.component.html
@@ -1,2 +1,26 @@
 <p>libros-prestados works!</p>
 <h2>Listado de libros prestados</h2>
+<!--
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Nombre</th>
+            <th>Autor</th>
+            <th>Prestado a</th>
+            <th>Genero</th>
+
+            
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor = "let item of libros">
+            <td>{{item.nombre}}</td>
+            <td>{{item.autor}}</td>
+            <td>{{item.prestadoa}}</td>
+            <td>{{item.genero}}</td>
+            
+
+        </tr>
+    </tbody>
+</table>
+-->
