--- a/app/formulario-libro/formulario-libro.component.html
+++ b/app/formulario-libro/formulario-libro.component.html
@@ -1,7 +1,7 @@
 
 <h2>Ingresar nuevo libro</h2>
 
-<form (ngSubmit)="agregarLibro()">
+<form (ngSubmit)="guardar()">
     
     <label for="name">Nombre</label>
     <input type="text" name="name" id="name" [(ngModel)]="libro.name">
